# SFML-CLion

./: CMakeLists.txt  main.cpp
